<resources>
    <string name="app_name">Nav Drawer Experiment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="tools_name">Tools</string>
    <string name="communicate_name">Communicate</string>
    <string name="nav_title">My App</string>
    <string name="send_name">Send</string>
</resources>