<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_tools_icon"
            android:title="@string/tools_name" />
    </group>

    <item android:title="@string/communicate_name" >
        <menu>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share_icon"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_send_icon"
            android:title="@string/send_name" />
        </menu>
    </item>

</menu>